Fixed main window overflow issue

--- a/stream_sync/src/css/index.css
+++ b/stream_sync/src/css/index.css
@@ -99,7 +99,7 @@ code {
 }
 
 .chat_box {
-  height: 70vh;
+  height: 65vh;
   overflow-y: auto;
 }
 
